@@ -38,6 +38,9 @@
     <Compile Include="SdbEvaluationTests.cs" />
     <Compile Include="MdbEvaluationTests.cs" />
     <Compile Include="EvaluationTests.cs" />
+    <Compile Include="StackFrameTests.cs" />
+    <Compile Include="MdbStackFrameTests.cs" />
+    <Compile Include="SdbStackFrameTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MonoDevelop.Debugger.Tests.TestApp\MonoDevelop.Debugger.Tests.TestApp.csproj">
