@@ -1,10 +1,10 @@
 // 
-// MdbEvaluationTests.cs
+// SdbStackFrameTests.cs
 //  
 // Author:
 //       Lluis Sanchez Gual <lluis@novell.com>
 // 
-// Copyright (c) 2009 Novell, Inc (http://www.novell.com)
+// Copyright (c) 2010 Novell, Inc (http://www.novell.com)
 // 
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -27,31 +27,14 @@
 using System;
 using NUnit.Framework;
 
-namespace MonoDevelop.Debugger.Tests.Mdb
+namespace MonoDevelop.Debugger.Tests.Soft
 {
 	[TestFixture()]
-	public class MdbEvaluationTests: EvaluationTests
+	public class SdbStackFrameTests: StackFrameTests
 	{
-		public MdbEvaluationTests (): base ("Mono.Debugger.Mdb")
-		{
-		}
-		
-		[Test()]
-		[Ignore ("Not working due to bug #584306")]
-		public override void Assignment ()
-		{
-		}
-		
-		[Test()]
-		[Ignore ("Not working due to bug #584306")]
-		public override void AssignmentStatic ()
-		{
-		}
-		
-		[Test()]
-		[Ignore ("Not yet implemented")]
-		public override void TypeReferenceGeneric ()
+		public SdbStackFrameTests (): base ("Mono.Debugger.Soft")
 		{
 		}
 	}
 }
+
