@@ -1,3 +1,14 @@
+2010-04-14  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* StackFrameTests.cs:
+	* MdbStackFrameTests.cs:
+	* SdbEvaluationTests.cs:
+	* SdbStackFrameTests.cs:
+	* MdbEvaluationTests.cs:
+	* MonoDevelop.Debugger.Tests.csproj: Added new test suite for
+	  StackFrame. Reorganized a bit the namespaces. Added tests
+	  for bug #580994.
+
 2010-04-06  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* EvaluationTests.cs: Make some tests work on windows.
